maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:14: error: Unmatched closing brace '}' ignored here
                          }} 
                          ^